--- a/Argon Assault/Packages/manifest.json
+++ b/Argon Assault/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.2",
     "com.unity.inputsystem": "1.0.2",
+    "com.unity.postprocessing": "2.3.0",
     "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.16",
     "com.unity.textmeshpro": "3.0.6",
